load dashboard data only on demand
